Don't hide arch

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
     <thead><tr>
       <th data-type="numeric">Time</th>
       <th data-hide="xs,phone,sm">Revision</th>
-      <th data-hide="xs">Arch</th>
+      <th>Arch</th>
       <th>OS</th>
       <th data-hide="xs,phone">Compiler</th>
       <th data-hide="xs,phone,sm" data-sort-ignore="true">Comment</th>
