--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,9 @@
  %-%>
 
 <% include header1.ejs -%>
-<title><%= l.util.branding %> FATE</title>
+<title>FFmpeg FATE</title>
 <% include header2.ejs -%>
-<%= l.util.branding %> FATE
+FFmpeg FATE
 <% include header3.ejs -%>
 
 <p>
