--- a/views/report.ejs
+++ b/views/report.ejs
@@ -3,7 +3,7 @@
  %-%>
 
 <% include header1.ejs %>
-<title><%= l.slot %> <%= l.summary.rev %> - <%= l.util.branding %> FATE</title>
+<title><%= l.slot %> <%= l.summary.rev %> - FFmpeg FATE</title>
 <link rel="stylesheet" href="/css/prism.min.css" />
 <% include header2.ejs %>
 Report of <%= l.slot %> <%= l.summary.rev %>
