--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,7 +3,7 @@
  %%>
 
 <% include header1.ejs -%>
-<title>Error <%= l.status %> - FFmpeg FATE</title>
+<title>Error <%= l.status %> – FFmpeg FATE</title>
 <% include header2.ejs -%>
 Error <%= l.status %>
 <% include header3.ejs -%>
