--- a/views/history.ejs
+++ b/views/history.ejs
@@ -3,7 +3,7 @@
  %-%>
 
 <% include header1.ejs -%>
-<title>Slot <%= l.slot %> - FFmpeg FATE</title>
+<title>Slot <%= l.slot %> – FFmpeg FATE</title>
 <% include header2.ejs -%>
 Report history for <%= l.slot %>
 <% include header3.ejs -%>
